Update 'ol5tupgd1-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:107138d05a82f0f2309097e898ebaa51371ec33c@sha256:5831d442b059bb13a14c4f1b03a1b0b08676a6a2e6c49a885ad993d5708d2a14

--- a/components/ol5tupgd1-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/ol5tupgd1-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ol5tupgd1-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:107138d05a82f0f2309097e898ebaa51371ec33c@sha256:5831d442b059bb13a14c4f1b03a1b0b08676a6a2e6c49a885ad993d5708d2a14
+          name: container-image
